<resources>
	<string name="app_name">巴巴驿站</string>
	
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	
	<string name="action_settings">Settings</string>
	
	<!--公共-->
	<string name="please_wait">请等待…</string>
	<string name="network_error">网络异常，请稍后重试</string>
	<string name="confirm">确认</string>
	<string name="cancel">取消</string>
	
	<!--登录-->
	<string name="title_activity_login">巴巴快巴移动站务系统</string>
	<string name="login_account">账号</string>
	<string name="login_pwd">密码</string>
	<string name="login_save_pwd">记住该密码</string>
	<string name="login">登录</string>
	
	<!--主页-->
	<string name="station_title">请选择车站</string>
	<string name="station_change">切换</string>
	<string name="station_filter">过滤</string>
	<string name="passenger_flow_summary">客流汇总</string>
	<string name="no_usable_station">无可用车站</string>
	<string name="schem_no_data">暂无数据</string>
	<string name="schem_type_overtime">加班</string>
	<string name="schem_bus_id">%1$d班次</string>
	<string name="schem_station">%1$s-%2$s</string>
	<string name="schem_sale_num">已售&#160;%1$d</string>
	<string name="schem_seat_remain">余座&#160;%1$d</string>
	<string name="schem_reverse_num">预订&#160;%1$d</string>
	<string name="schem_filter_date">发车日期</string>
	<string name="schem_filter_type">班次类别</string>
	<string name="schem_filter_bus_id">车&#160;&#160;次&#160;&#160;号</string>
	<string name="schem_filter_bus_id_hint">请输入车次号（选填）</string>
	<string name="schem_filter_show_overtime">显示超时班次</string>
	<string name="schem_filter_end_station">到达站点</string>
	<string name="schem_filter_end_station_hint">请选择到达站点（选填）</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="filter_bus_type_all">全部</string>
	<string name="filter_bus_type_1">正班</string>
	<string name="filter_bus_type_2">加班</string>
	<string name="person_center_feedback">意见反馈</string>
	<string name="person_center_upgrade">检查更新</string>
</resources>
