<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/action_station"
		android:orderInCategory="10"
		android:title="@string/station_change"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_filter"
		android:orderInCategory="20"
		android:icon="@drawable/icon_home_ticket_filter"
		android:title="@string/station_filter"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_passenger_flow_summary"
		android:orderInCategory="30"
		android:icon="@drawable/icon_date"
		android:title="@string/passenger_flow_summary"
		app:showAsAction="collapseActionView|withText"/>
	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		android:title="@string/action_settings"
		app:showAsAction="never"/>
</menu>
