<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@android:color/white"
		android:divider="@drawable/shape_line_break"
		android:orientation="vertical"
		android:paddingTop="@dimen/spacing_32"
		android:showDividers="middle"
		android:layout_above="@+id/schem_filter_bottom_ll">
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<TextView
				android:id="@+id/textView4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="@dimen/spacing_10"
				android:text="@string/schem_filter_date"/>
			
			<TextView
				android:id="@+id/schem_filter_date_tv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:drawablePadding="@dimen/spacing_8"
				android:drawableRight="@drawable/icon_right_arrow"
				android:padding="@dimen/spacing_10"
				android:text="TextView"
				tools:text="2018-1-2"/>
		</RelativeLayout>
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:padding="@dimen/spacing_10"
				android:text="@string/schem_filter_type"/>
			
			<RadioGroup
				android:id="@+id/schem_filter_type_rg"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:orientation="horizontal"
				android:padding="@dimen/spacing_10">
				
				<RadioButton
					android:id="@+id/schem_filter_type_0_rb"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="全部"/>
				
				<RadioButton
					android:id="@+id/schem_filter_type_1_rb"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="正班"/>
				
				<RadioButton
					android:id="@+id/schem_filter_type_2_rb"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="加班"/>
			
			</RadioGroup>
		</RelativeLayout>
		
		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/spacing_10">
			
			<TextView
				android:id="@+id/textView6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/schem_filter_bus_id"
				app:layout_constraintBaseline_toBaselineOf="@+id/schem_filter_bus_id_et"
				app:layout_constraintLeft_toLeftOf="parent"/>
			
			<EditText
				android:id="@+id/schem_filter_bus_id_et"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:background="@color/color_F1F1F1"
				android:ems="10"
				android:hint="@string/schem_filter_bus_id_hint"
				android:inputType="numberSigned"
				android:padding="@dimen/spacing_5"
				android:textSize="14sp"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintStart_toEndOf="@+id/textView6"
				app:layout_constraintTop_toTopOf="parent"/>
			
			<CheckBox
				android:id="@+id/schem_filter_show_overtime_cb"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginTop="24dp"
				android:text="@string/schem_filter_show_overtime"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView6"/>
		
		</android.support.constraint.ConstraintLayout>
		
		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="@dimen/spacing_10">
			
			<TextView
				android:id="@+id/textView7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text="@string/schem_filter_end_station"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"/>
			
			<RelativeLayout
				android:id="@+id/editText3"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:background="@color/color_F1F1F1"
				android:padding="@dimen/spacing_5"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintStart_toEndOf="@+id/textView7"
				app:layout_constraintTop_toTopOf="parent">
				
				<TextView
					android:id="@+id/schem_filter_station_tv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentStart="true"
					android:layout_alignParentTop="true"
					android:ems="10"
					android:hint="@string/schem_filter_end_station_hint"
					android:textSize="14sp"/>
				
				<TextView
					android:id="@+id/schem_filter_station_del_tv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true"
					android:layout_alignParentRight="true"
					android:text="删除"/>
			</RelativeLayout>
			
			<android.support.v7.widget.RecyclerView
				android:id="@+id/schem_filter_station_history_rv"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/editText3"
				tools:listitem="@layout/item_filter_station_history"/>
		</android.support.constraint.ConstraintLayout>
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/schem_filter_bottom_ll"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal">
		
		<Button
			android:id="@+id/schem_filter_confirm_bt"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/confirm"
			android:background="@color/colorPrimary"
			android:textColor="@android:color/white"/>
		
		<Button
			android:id="@+id/schem_filter_cancel_bt"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/cancel"
			android:background="@color/colorPrimaryDark"
			android:textColor="@android:color/white"/>
	</LinearLayout>
</RelativeLayout>